[workspace]
members = [
    "kobro",
    "kobro-ast",
    "kobro-hir",
    "kobro-lexer",
    "kobro-parser",
    "kobro-syntax"
]

[profile]
release = { lto = true, codegen-units = 1 }
bench = { lto = true, codegen-units = 1 }

[profile.dev]
# Disabling debug info speeds up builds a lot, and we do not really
# rely on debug info for debugging
debug = 0
