[package]
name = "kobro_hir"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["David Karrick <the.white.wolf.is.1337@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
ast = {path = "../kobro-ast", package = "kobro_ast"}
la-arena = "0.2.0"
smol_str = "0.1.17"
syntax = {path = "../kobro-syntax", package = "kobro_syntax"}

[dev-dependencies]
parser = {path = "../kobro-parser", package = "kobro_parser"}